# yolo_kwcoco_serializer

./: README.md  pyproject.toml
yolo_kwcoco_serializer/: yolo_kwcoco_serializer.py
